# libsdp

./: CMakeLists.txt  LICENSE  README.md  test.cpp
include/: Array.h  Slice.h  attribute.h  decoder.h  encoder.h  sdp.h
src/: attribute.cpp  decoder.cpp  encoder.cpp  sdp.cpp
